--- a/1.MySQL增删改查基础.md
+++ b/1.MySQL增删改查基础.md
@@ -121,6 +121,15 @@ insert into my_student
 values
 ("itcast001"，"male"，"Tom"，"3"),
 ("itcast002"，"female"，"Mary"，"15")；
+```
+
+```sql
+# 1. insert ignore 的使用 : 当出现主键或唯一索引重复之后，会忽略此次插入
+insert ignore into user(id,name,age)values(1,"小明",21)
+# 2. replace to 的使用 : 当出现主键或唯一索引重复之后，会删除原先的数据，并将这个新的记录插入进去
+replace into user(id,name,age)values(1,"小花",23); 
+3. on duplicate key update 的使用 : 当出现主键或唯一索引重复之后，则执行UPDATE语句
+insert into user(id,name,age)values(1,'杰克', 22) ON DUPLICATE KEY UPDATE name='杰克',age=22;
 
 
 ```
