--- a/3.MySQL函数集合.md
+++ b/3.MySQL函数集合.md
@@ -90,3 +90,8 @@ from login
 # 如果不是NULL，则返回第一个参数。 否则，IFNULL函数返回第二个参数。
 IFNULL(n1.new_num,0)
 ```
+
+7. concat()连接
+```sql
+select concat(name,’,’name,’,’name, ’,’ name) as “name” from tablename;
+```
