--- a/1.MySQL增删改查基础.md
+++ b/1.MySQL增删改查基础.md
@@ -1,5 +1,5 @@
-# &#127800; 数据库 &#127800;
-## &#127800; 1. 新增数据库
+# &#127800; 1数据库 &#127800;
+## &#127800; 1.1 新增数据库
 
 ```sql
 create database 数据库名字 [库选项]；
@@ -16,14 +16,14 @@ set names gbk
 create database 我的数据库 charset utf8;
 ```
 
-## &#127800; 2. 删除数据库：
+## &#127800; 1.2 删除数据库：
 
 ```sql
 # 注意：删除不可逆
 drop database 数据库名字
 ```
 
-## &#127800; 3. 更新、修改数据库：
+## &#127800; 1.3 更新、修改数据库：
 
 ```sql
 # 数据库名字不可以修改
@@ -32,7 +32,7 @@ alter database 数据库的名字 charset GBK;
 ```
 
 
-## &#127800; 4. 查看数据库：
+## &#127800; 1.4 查看数据库：
 
 ```sql
 # 查看所有数据库：
@@ -45,8 +45,8 @@ show databases like 'pattern';
 ```
 
 
-# &#127800; 数据表 &#127800; 
-## &#127800; 1. 新增数据表
+# &#127800; 2 数据表 &#127800; 
+## &#127800; 2.1 新增数据表
 ```sql
 # 新增可能存在的数据表：
 create table if not exists 表名(字段名字 数据类型，字段名字 数据类型)[表选项]；
@@ -59,14 +59,14 @@ age int
 )
 charset utf8;
 ```
-## &#127800; 2. 删除数据表
+## &#127800; 2.2 删除数据表
 
 ```sql
 delete from 表名 where 筛选条件
 # 这里不加table
 ```
 
-## &#127800; 3. 更新、修改数据表
+## &#127800; 2.3 更新、修改数据表
 
 ```sql
 # 修改表名：
@@ -78,7 +78,7 @@ alter table login change data date date;
 ```
 
 
-## &#127800; 4. 查看数据表
+## &#127800; 2.4 查看数据表
 
 ```sql
 # 查看所有表：
@@ -87,14 +87,15 @@ show tables
 ```sql
 # 查看表结构：查看表中的字段信息
 desc columns from 表名
+DESC tableName; 
 # 或者：
 describe columns from 表名
 # 或者：
 show columns from 表名
 ```
 
-# &#127800; 数据操作 &#127800;
-## &#127800; 1 新增数据
+# &#127800; 3 数据操作 &#127800;
+## &#127800; 3.1 新增数据
 ```sql
 # 场景1: 给table中的所有字段都插入数据：无需指定字段所属的列，但要求数据的顺序必须与表中字段列的顺序一致
 insert into 表名 
@@ -133,14 +134,14 @@ insert into user(id,name,age)values(1,'杰克', 22) ON DUPLICATE KEY UPDATE name
 
 
 ```
-## &#127800; 2 删除数据
-## &#127800; 3 修改数据
+## &#127800; 3.2 删除数据
+## &#127800; 3.3 修改数据
 ```sql
 # 更新数据表
 update 表名 set 字段 = 值 [where 筛选条件]
 # 这里不加table
 ```
-## &#127800; 4 查询数据
+## &#127800; 3.4 查询数据
 
 ```sql
 # 查看表中全部数据：
@@ -153,4 +154,15 @@ select id,number,sex
 from my_student 
 where id=1；
 ```
+### 3.4.1 模糊查询： like 、in 、between 、and 、is null。
+```sql
+4.Like： _任意单个字符 %任意多个字符 where name like ‘_chen_’ 	若使用_需要加上		转义字符\		 						( like‘%chen%’) 
+自由设置转义字符& escape ‘&’
+```
+### 3.4.2 逻辑运算符 and or not 可以使用 && || ! 但是不建议。
+### 3.4.3 运算符：> 、< 、= 、<= 、>= 、<>
+### 3.4.4 where id between 30 and 50
+5.In/not in         Where id in(10,20,30)      Where id not in(10,20,30)
+2.Is null / is not null			where leiName is null
+3.Is只能判断null 	=只能判断普通内容  <=> 安全等于，皆可判断
 
