--- a/5.SQL索引.md
+++ b/5.SQL索引.md
@@ -1,7 +1,7 @@
 # MySQL索引
 
--  索引不一定是唯一所以，是可以加快查询速度的。
-- 立索引原则：“**如何查就如何建**”。
+- 索引不一定是唯一索引，是可以加快查询速度的。
+- 建立索引原则：“**如何查就如何建**”。
 - 索引的建立，唯一的原目的就是**为了加快查询**（广义的查询），实际上**建立索引会使得数据存储所占空间变大**，
   - 有时索引所占的空间会查过数据本身的空间。
   - 索引的建立也会使得数据插入时变慢，特殊情况下，慢的难以忍受。
@@ -12,7 +12,7 @@
 
 ![为什么重复值高的字段不能建索引（比如性别字段等)](https://images2018.cnblogs.com/blog/35158/201806/35158-20180628110430497-1856877204.png)
 
-## 结论（以innodb为例）
+## 结论（以InnoDB为例）
 1. 非聚簇索引存储了对主键的引用，如果select字段不在非聚簇索引内，就需要跳到主键索引（上图中从右边的索引树跳到左边的索引树），再获取select字段值
 2. 如果非聚簇索引值重复率高，那么查询时就会大量出现上图中从右边跳到左边的情况，导致整个流程很慢
 3. 如果where值重复率高的字段，select用了limit，只查较少数据，也就是跳的次数很少的情况下，还是可以建索引的（后来想想也没必要，limit限制了数量，全表扫描也很快，除非字段值是排序的，必须扫描完前面的所有值）
